app/src/main/java/com/example/fail/network/model/BaseResponse.kt
package com.example.fail.network.model


import com.google.gson.annotations.SerializedName

data class BaseResponse(
    @SerializedName("info")
    val info: Info,
    @SerializedName("results")
    val characters: List<Character>
)